--- a/web/css/_vars.css
+++ b/web/css/_vars.css
@@ -1,5 +1,5 @@
 :root {
-    /* GLOBAL */
+    /* CORE */
     /* 
 			- Values range from 100 (smallest) to 900 (largest)
 			- Scaling values scale from 400px browser width to 1000px browser width 
@@ -10,13 +10,13 @@
     --gap-100: clamp(4px, 4px + (4 * var(--scaler)), 8px);
     --gap-200: clamp(8px, 8px + (4 * var(--scaler)), 12px);
     --gap-300: clamp(12px, 12px + (6 * var(--scaler)), 18px);
-    --gap-400: clamp(18px, 18px + (6 * var(--scaler)), 24px);
-    --gap-500: clamp(24px, 24px + (6 * var(--scaler)), 30px);
-    --gap-600: clamp(30px, 30px + (10 * var(--scaler)), 40px);
-    --gap-700: clamp(40px, 40px + (12 * var(--scaler)), 52px);
-    --gap-800: clamp(52px, 52px + (18 * var(--scaler)), 70px);
-    --gap-900: clamp(68px, 68px + (24 * var(--scaler)), 92px);
-    /* fonts */
+    --gap-400: clamp(16px, 16px + (8 * var(--scaler)), 24px);
+    --gap-500: clamp(20px, 20px + (10 * var(--scaler)), 30px);
+    --gap-600: clamp(28px, 28px + (12 * var(--scaler)), 40px);
+    --gap-700: clamp(36px, 36px + (16 * var(--scaler)), 52px);
+    --gap-800: clamp(48px, 46px + (22 * var(--scaler)), 70px);
+    --gap-900: clamp(62px, 62px + (30 * var(--scaler)), 92px);
+    /* font sizes */
     --font-size-100: clamp(14px, 14px + (2 * var(--scaler)), 16px);
     --font-size-200: clamp(16px, 16px + (2 * var(--scaler)), 18px);
     --font-size-300: clamp(18px, 18px + (4 * var(--scaler)), 22px);
@@ -34,6 +34,7 @@
     --supporting-text: 16px;
     --component-text: var(--font-size-200);
     --article-text: var(--font-size-300);
+    /* line heights */
     --line-height-100: 1.4;
     --line-height-200: 1.3;
     --line-height-300: 1.2;
@@ -51,14 +52,14 @@
     --site-width-xs: 380px;
     --site-gutter: var(--gap-400);
     /* colors */
-    --shade-0: #FFF;
+    --shade-0: #fff;
     --shade-100: #F4F5F7;
     --shade-200: #E2E2E2;
     --shade-300: #9F9F9F;
     --shade-400: #707070;
     --shade-450: #4E5761;
     --shade-500: #4A4A4A;
-    --shade-600: #453F3F;
+    --shade-600: #36373c;
     --shade-650: #252836;
     --shade-700: #252525;
     --shade-800: #222222;
@@ -72,17 +73,20 @@
     /* utility colors */
     --alert: #FF2744;
     --success: #299934;
-    /* effects */
+    /* other */
     --shadow-drop: 0 1px 3px rgba(0, 0, 0, 0.1);
     --shadow-glow: 0 0 5px rgba(0, 0, 0, 0.1);
+    --border-radius-sm: 3px;
+    --border-radius-md: 5px;
+    --border-radius-lg: 8px;
 }
 
 :root {
-    /* BRAND - these change per site */
+    /* BRAND - Sky News */
     --brand-primary: #063E7B;
     --brand-secondary: #D0021B;
     --brand-linear: linear-gradient(#164C99, #032C77);
-    --brand-shade-linear: linear-gradient(grey, silver);
+    --brand-shade-linear: linear-gradient(#f5f5f5, #e3e4e4);
     --live: #d0021b;
     --live-linear: linear-gradient(#E90E10, #BC0000);
     --breaking: #FDE000;
@@ -91,15 +95,14 @@
 }
 
 :root {
-    /* ALIASES - these form your THEME, and change in dark mode or other variations */
+    /* THEME - light mode */
     --text-color: var(--shade-500);
     --text-color-dark: var(--shade-900);
     --text-color-secondary: var(--shade-400);
     --text-color-tertiary: var(--shade-300);
     --text-color-on-dark: #fff;
-    --border-color-light: #fff;
     --border-color: var(--shade-200);
-    --border-color-strong: #fff;
+    --border-color-strong: var(--shade-450);
     --link-color: #3157A1;
     --link-color-on-dark: #2AA2E1;
     --canvas: var(--shade-0);
@@ -108,16 +111,28 @@
     --component-canvas: var(--shade-0);
     --component-canvas-shade: var(--shade-100);
     --component-canvas-shade-linear: #fff;
-    --component-canvas-highlight: #fff;
-    --component-canvas-important: #222;
+    --component-canvas-highlight: var(--shade-linear-100);
+    --component-canvas-important: var(--shade-800);
 }
 
 @media all and (prefers-color-scheme: dark) {
      :root {
+        /* THEME - dark mode */
         --text-color: var(--shade-100);
+        --text-color-secondary: var(--shade-300);
+        --text-color-tertiary: var(--shade-400);
         --canvas: var(--shade-900);
         --canvas-shade: var(--shade-900);
         --component-canvas: var(--shade-700);
-        --link-color: var(var(--link-color-on-dark));
+        --component-canvas-shade: var(--shade-600);
+        --component-canvas-highlight: var(--shade-650);
+        --component-canvas-important: var(--shade-450);
+        --link-color: var(--link-color-on-dark);
+        --border-color: var(--shade-450);
+        --border-color-strong: var(--shade-300);
+    }
+     :root {
+        /* BRAND - Sky News dark mode */
+        --brand-shade-linear: linear-gradient(#252525, #2b2b2b);
     }
 }
