--- a/components/swatch/styles.css
+++ b/components/swatch/styles.css
@@ -8,13 +8,22 @@
 }
 
 .swatch-color {
+    position: relative;
     border-radius: 4px;
-    padding: var(--gap-200) var(--gap-300);
-    padding-top: 50%;
+    padding-top: 60%;
     color: white;
     display: grid;
     place-items: flex-end flex-start;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.swatch-color span {
+    position: absolute;
+    padding: 0 0 var(--gap-200) var(--gap-300);
+}
+
+.swatch-color span:before {
+    content: attr(data-label)
 }
 
 .swatch-body {
