--- a/web/css/_reset.css
+++ b/web/css/_reset.css
@@ -72,6 +72,10 @@ a:hover {
     outline-offset: -2px;
 }
 
+[id] {
+    scroll-margin-top: 1em;
+}
+
 
 /* Inherit fonts for inputs and buttons */
 
